fix: Overflow of layout shouldnt be hidden

--- a/src/Layout/Layout.scss
+++ b/src/Layout/Layout.scss
@@ -53,7 +53,6 @@
 .main {
   position: relative;
   z-index: 5;
-  overflow: hidden;
   transform-origin: left;
   transform-style: preserve-3d;
   transition: 0.5s ease-in-out;
